syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.smartbuilding.access";
option java_outer_classname = "AccessServiceImpl";

package access;

//define services
service AccessService {

	rpc occupantReport(occupantReportRequest) returns (stream occupantReportResponse) {}
	
  	rpc occupantCheckList(stream occupantCheckListRequest) returns (stream occupantCheckListResponse) {}

}

//define messages
message occupantReportRequest {
	string requestReport = 1;
}

message occupantReportResponse {
    string reportResponse = 1;
}

message occupantCheckListRequest {
	string listOfNames = 1;
}

message occupantCheckListResponse {
    string checklistResponse = 1;
}